Minor cleanup
Change-Id: Ide35e6cf2abe2b723e6d45e796a21ae135706bf5